--- a/serendale/backend/.env
+++ b/serendale/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI="mongodb://localhost:27017"
-MONGODB_DB="providers_db"
-MONGODB_COLLECTION="providers"
+MONGODB_URI=mongodb+srv://apoorvmk457_db_user:sQzvLm8lwiMVLRoK@techathon.npghn3t.mongodb.net/
+MONGODB_DB=techathon
+MONGODB_COLLECTION=providers
