--- a/serendale/backend/.env
+++ b/serendale/backend/.env
@@ -1,9 +1,14 @@
-# MongoDB Connection
-MONGODB_URI=mongodb+srv://<username>:<password>@techathon.npghn3t.mongodb.net/
+MONGODB_URI=mongodb+srv://<username>:<password>@techathon.npghn3t.mongodb.net/providers_db
 MONGODB_DB=providers_db
 MONGODB_COLLECTION=providers
+
+
+# MongoDB Connection
+ MONGODB_URI=mongodb+srv://apoorvmk457_db_user:sQzvLm8lwiMVLRoK@techathon.npghn3t.mongodb.net/providers_db MONGODB_DB=providers_db 
+ MONGODB_COLLECTION=providers
 
 # FastAPI App Config
 APP_ENV=development
 APP_NAME=TechathonProject
 APP_PORT=10000
+
