--- a/serendale/backend/.env
+++ b/serendale/backend/.env
@@ -1,5 +1,5 @@
 # MongoDB Connection
-MONGODB_URI=mongodb+srv://<username>:<password>@techathon.npghn3t.mongodb.net/
+MONGODB_URI=mongodb+srv://apoorvmk457_db_user:sQzvLm8lwiMVLRoK@techathon.npghn3t.mongodb.net/?retryWrites=true&w=majority&appName=techathon
 MONGODB_DB=providers_db
 MONGODB_COLLECTION=providers
 
